invertendo array caso origem esteja depois do destino.